--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,23 @@
     <meta charset="UTF-8">
     <title>Homepage</title>
     <link rel="stylesheet" href="{% static 'nowy.css' %}">
+
 </head>
 <body>
+
+    {% if user.is_authenticated %}
+        <h4>Hello {{ user.username }}</h4>
+        <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit">Logout</button>
+        </form>
+    {% else %}
+    <a href="{% url 'login_view' %}"><button>Login</button></a>
+    {% endif %}
+
+    <hr>
+
+    <a href="{% url 'add' %}">Add film</a>
     {% if movies|length > 0 %}
         <h2>Counter of films: {{ movies|length }}</h2>
 
@@ -15,6 +30,8 @@
             <p>{{ movie.release_date }}</p>
             <p>{{ movie.description }}</p>
             <img src="http://127.0.0.1:8000/poster/{{ movie.poster }}" alt="Description of image" />
+            <a href="{% url 'edit' movie.movie_id %}">Edit</a>
+            <a href="{% url 'delete' movie.movie_id %}">Delete</a>
         {% endfor %}
     {% else %}
         <h2>Movies are not available</h2>
