--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -1,13 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="{% static 'nowy.css' %}">
+{% extends 'main.html' %}
 
-</head>
-<body>
+{% block title %} Movie List {% endblock %}
+
+{% block body %}
 
     {% if user.is_authenticated %}
         <h4>Hello {{ user.username }}</h4>
@@ -37,5 +32,4 @@
         <h2>Movies are not available</h2>
     {% endif %}
 
-</body>
-</html>
+{% endblock %}
