--- a/homepage/templates/delete.html
+++ b/homepage/templates/delete.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'main.html' %}
+
+{% block title %} {{ action }} {% endblock %}
+
+{% block body %}
     <h1>Do you really want to delete following film: "{{ movie.title }}"</h1>
     <form method="POST">
         {% csrf_token %}
@@ -13,5 +11,4 @@
     <a href="{{ previous_url }}">
         <button type="submit">Back</button>
     </a>
-</body>
-</html>
+{% endblock %}
