--- a/homepage/templates/new_form.html
+++ b/homepage/templates/new_form.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create film</title>
-</head>
-<body>
+{% extends 'main.html' %}
+
+{% block title %} {{ action }} {% endblock %}
+
+{% block body %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form }}
@@ -14,5 +12,4 @@
     <a href="{{ previous_url }}">
         <button type="submit">Back</button>
     </a>
-</body>
-</html>
+{% endblock %}
