--- a/homepage/templates/registration/login.html
+++ b/homepage/templates/registration/login.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'main.html' %}
+
+{% block title %} {{ action }} {% endblock %}
+
+{% block body %}
     <form method="POST">
         {% csrf_token %}
         {{ form }}
         <button type="submit">Login</button>
     </form>
-</body>
-</html>
+{% endblock %}
