--- a/homepage/static/nowy.css
+++ b/homepage/static/nowy.css
@@ -2,3 +2,22 @@ body {
     padding: 2rem;
     color: red;
 }
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch
+}
+
+.box {
+    width: 400px;
+    border: 2px solid black;
+    margin-bottom: 20px;
+}
+
+.scaled-image {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
