--- a/homepage/templates/new_form.html
+++ b/homepage/templates/new_form.html
@@ -1,11 +1,13 @@
 {% extends 'main.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %} {{ action }} {% endblock %}
 
 {% block body %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form }}
+        {{ form|crispy }}
 
         <button type="submit">Submit</button>
     </form>
