--- a/homepage/static/nowy.css
+++ b/homepage/static/nowy.css
@@ -14,10 +14,77 @@ body {
     width: 400px;
     border: 2px solid black;
     margin-bottom: 20px;
+    padding: 10px;
 }
 
 .scaled-image {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
 }
+
+.navbar {
+      overflow: hidden;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .navbar .logo {
+      color: black;
+      font-size: 24px;
+      text-decoration: none;
+    }
+
+    .navbar .nav-links {
+      display: flex;
+      list-style: none;
+    }
+
+    .navbar .nav-links li {
+      padding: 0 15px;
+    }
+
+    .navbar .nav-links a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      transition: color 0.3s;
+    }
+
+    .navbar .nav-links a:hover {
+      color: #f0a500;
+    }
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background-color: white;
+      margin: 4px 0;
+    }
+
+    @media (max-width: 768px) {
+      .navbar .nav-links {
+        display: none;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: #333;
+        flex-direction: column;
+      }
+
+      .navbar .nav-links.show {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
