--- a/homepage/templates/registration/login.html
+++ b/homepage/templates/registration/login.html
@@ -5,9 +5,13 @@
 {% block title %} {{ action }} {% endblock %}
 
 {% block body %}
-    <form method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit">Login</button>
-    </form>
+
+    <div style="width: 400px">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+
 {% endblock %}
