--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -3,11 +3,11 @@
 {% block title %} Movie List {% endblock %}
 
 {% block body %}
-
-<hr>
-  <nav class="navbar">
+  <nav class="navbar1 top-bar">
       {% if user.is_authenticated %}
             <a href="#" class="logo"><h4>{{ user.username }}</h4></a>
+      {% else %}
+            <h4>Zaloguj się</h4>
       {% endif %}
 
       <ul class="nav-links" id="navLinks">
@@ -27,23 +27,12 @@
       <li>
           <a href="{% url 'add' %}"><button class="btn btn-primary">Services</button></a>
       </li>
-      <li><a href="{% url 'add' %}"><button class="btn btn-primary">Contact</button></a></li>
+      <li>
+          <a href="{% url 'add' %}"><button class="btn btn-primary">Contact</button></a>
+      </li>
     </ul>
-    <div class="hamburger" id="hamburger">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
   </nav>
-    <hr>
-  <script>
-    const hamburger = document.getElementById('hamburger');
-    const navLinks = document.getElementById('navLinks');
 
-    hamburger.addEventListener('click', () => {
-      navLinks.classList.toggle('show');
-    });
-  </script>
 
     {% if movies|length > 0 %}
 
