--- a/homepage/templates/main.html
+++ b/homepage/templates/main.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'nowy.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/c6b38ac192.js" crossorigin="anonymous"></script>
     <title>{% block title %} {% endblock %}</title>
 
 
