--- a/homepage/static/nowy.css
+++ b/homepage/static/nowy.css
@@ -1,36 +1,13 @@
 body {
     padding: 2rem;
-    color: red;
     padding: 0;
-}
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: stretch
-}
-
-.box {
-    width: 400px;
-    border: 2px solid black;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-.scaled-image {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
+    background: #EEAECA;
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
 
 .navbar1{
-    height: 130px;
     display: flex;
-    list-style-type: none;
-    justify-content: space-around;
-    align-items: center;
-    background-color: grey;
+    justify-content: space-between;
     margin-bottom: 30px;
 }
 
@@ -40,4 +17,19 @@ ul {
     list-style-type: none;
     justify-content: space-around;
 }
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.icon{
+    font-size: 1.6rem;
+    padding: 10px 0;
+    margin: 0;
+}
+
 
