--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -3,36 +3,92 @@
 {% block title %} Movie List {% endblock %}
 
 {% block body %}
-  <nav class="navbar1 top-bar">
-      {% if user.is_authenticated %}
-            <a href="#" class="logo"><h4>{{ user.username }}</h4></a>
-      {% else %}
-            <h4>Zaloguj się</h4>
-      {% endif %}
 
-      <ul class="nav-links" id="navLinks">
-      <li>
+<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
+  <div class="container-fluid">
+      <div style="text-align: center; color: white; padding-right: 20px;">
+          <a style=" margin: 0;" class="navbar-brand" href="{% url 'login_view' %}">
+              <i style="font-size: 30px;" class="fa-solid fa-user"></i>
+              <br>
+              {% if user.is_authenticated %}
+                {{ user.username }}
+              {% else %}
+                <a class="nav-link" href="{% url 'login_view' %}">Login</a>
+              {% endif %}
+          </a>
+      </div>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           {% if user.is_authenticated %}
-                <form action="{% url 'logout' %}" method="POST">
-                    {% csrf_token %}
-                <button type="submit" class="btn btn-primary">Logout</button>
-                </form>
-          {% else %}
-                <a href="{% url 'login_view' %}"><button class="btn btn-primary">Login</button></a>
-          {% endif %}
-      </li>
-      <li>
-          <a href="{% url 'add' %}"><button class="btn btn-primary">Add film</button></a>
-      </li>
-      <li>
-          <a href="{% url 'add' %}"><button class="btn btn-primary">Services</button></a>
-      </li>
-      <li>
-          <a href="{% url 'add' %}"><button class="btn btn-primary">Contact</button></a>
-      </li>
-    </ul>
-  </nav>
 
+            <form action="{% url 'logout' %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">Logout</button>
+            </form>
+
+          {% endif %}
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+
+          {% if request.user.is_superuser %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'add' %}">Add film</a>
+              </li>
+          {% endif %}
+          {% if request.user.is_superuser %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'admin:index' %}">Admin panel</a>
+              </li>
+          {% endif %}
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Movies
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Crime">Crime</a></li>
+                <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Drama">Drama</a></li>
+                  <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Mystery">Mystery</a></li>
+                  <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Music">Music</a></li>
+                  <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Action">Action</a></li>
+                  <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Sport">Sport</a></li>
+                  <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Sport">Sport</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'homepage' %}">Wszystkie</a></li>
+              </ul>
+        </li>
+
+         <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Watchlist
+          </a>
+          <ul class="dropdown-menu">
+
+              {% if user.is_authenticated %}
+                {% for watch_movie in watchlist_movies %}
+                    <li><a class="dropdown-item" href="#{{ watch_movie }}">{{ watch_movie }}<i class="fa-solid fa-star" style="padding-left: 5px; color: yellow"></i></a></li>
+                {% endfor %}
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'show_watchlist' %}">Sprawdź watchlistę</a></li>
+              {% else %}
+
+                <li><a class="dropdown-item" href="{% url 'login_view' %}">Zaloguj się aby zobaczyć swoje filmy</a></li>
+
+              {% endif %}
+          </ul>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
 
     {% if movies|length > 0 %}
 
@@ -40,23 +96,48 @@
 
         {% for movie in movies %}
 
-                <div class="box">
-                    <div style="height: 80px">
-                        <h2>{{ movie }}</h2>
-                    </div>
-                    <div>
-                        <p>{{ movie.release_date }}</p>
-                        <p>{{ movie.description }}</p>
-                        <p>{{ movie.genre }}</p>
-                    </div>
-                    <div>
-                        <img class="scaled-image" src="http://127.0.0.1:8000/homepage/poster/{{ movie.poster }}" alt="Description of image" />
-                    </div>
+                <div class="card" style="width: 26rem; background-color: rgba(0, 0, 0, 0.1);" id="{{ movie }}">
+                  <img src="http://127.0.0.1:8000/homepage/poster/{{ movie.poster }}" class="card-img-top" alt="{{ movie }}">
+                  <div class="card-body">
+                        <h5 class="card-title">{{ movie }}</h5>
+                        <hr>
+                        <p class="card-text" style="height: 10rem;">{{ movie.description }}</p>
+                        <hr>
+                        <div class="container">
 
-                    <a href="{% url 'edit' movie.movie_id %}">Edit</a>
-                    <a href="{% url 'delete' movie.movie_id %}">Delete</a>
+                            {% if movie in watchlist_movies %}
+                                <a href="#" class="card-link icon">
+                                    <button type="button" class="btn btn-dark">
+                                        In your watchlist <i class="fa-solid fa-star" style="color: yellow;"></i>
+                                    </button>
+                                </a>
+                            {% else %}
+                                <a href="{% url 'add_watchlist' movie.movie_id %}" class="card-link icon">
+                                    <button type="button" class="btn btn-dark">
+                                        Add to watchlist <i class="fa-solid fa-star"></i>
+                                    </button>
+                                </a>
+                            {% endif %}
+                          <div class="btn-group"  role="group" aria-label="Basic mixed styles example">
+                              <button type="button" class="btn btn-outline-success"><i class="fa-solid fa-thumbs-up"></i></button>
+                              <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-thumbs-down"></i></button>
+                          </div>
+                            <div class="btn-group" role="group" aria-label="Basic outlined example">
+                              <button type="button" class="btn btn-outline-primary">
+                                <i class="fa-regular fa-comments"></i>
+                              </button>
+                            </div>
+                        </div>
+                  </div>
+
+                    {% if request.user.is_superuser %}
+                        <div class="card-body" style="padding-left: 28px;">
+                            <a href="{% url 'edit' movie.movie_id %}" class="card-link icon"><i class="fa-solid fa-pen-to-square"></i></a>
+                            <a href="{% url 'delete' movie.movie_id %}" class="card-link icon"><i class="fa-solid fa-trash" style="color: red;"></i></a>
+                        </div>
+                    {% endif %}
+
                 </div>
-
         {% endfor %}
     {% else %}
         <h2>Movies are not available</h2>
