--- a/homepage/templates/register.html
+++ b/homepage/templates/register.html
@@ -8,11 +8,11 @@
 
     <div class="card" style="width: 18rem;">
       <div class="card-body">
-        <h5 class="card-title">Zaloguj się</h5>
+        <h5 class="card-title">Zarejestruj się</h5>
         <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Register</button>
         </form>
       </div>
     </div>
