homepage.html update

--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -125,6 +125,10 @@
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
                               <button type="button" class="btn btn-outline-primary">
                                 <i class="fa-regular fa-comments"></i>
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                        99+
+                                        <span class="visually-hidden">unread messages</span>
+                                    </span>
                               </button>
                             </div>
                         </div>
