change style register form

--- a/homepage/templates/register.html
+++ b/homepage/templates/register.html
@@ -6,7 +6,8 @@
 
 {% block body %}
 
-    <div class="card" style="width: 18rem;">
+<div class="form-container">
+    <div class="card" style="width: 18rem; background-color: rgba(0, 0, 0, 0.1);">
       <div class="card-body">
         <h5 class="card-title">Zarejestruj się</h5>
         <form method="POST">
@@ -16,5 +17,6 @@
         </form>
       </div>
     </div>
+</div>
 
 {% endblock %}
