adding some features

--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -103,7 +103,7 @@
                         <hr>
                         <p class="card-text" style="height: 10rem;">{{ movie.description }}</p>
                         <hr>
-                        <div class="container">
+                        <div class="container" style="padding: 0 5px">
 
                             {% if movie in watchlist_movies %}
                                 <a href="#" class="card-link icon">
