--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -88,7 +88,7 @@
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="{% url 'show_watchlist' %}">Sprawdź watchlistę</a></li>
                     {% else %}
-                        <li><a class="dropdown-item" href="{% url 'login_view' %}">Dodaj filmy do watchlisty</a></li>
+                        <li><a class="dropdown-item" href="#">Dodaj filmy do watchlisty</a></li>
                     {% endif %}
               {% else %}
 
