--- a/homepage/templates/new_form.html
+++ b/homepage/templates/new_form.html
@@ -15,10 +15,10 @@
             {% csrf_token %}
             {{ form|crispy }}
             <button type="submit" class="btn btn-primary">Zapisz</button>
-            <a href="{% url 'homepage' %}">
-                <button type="submit" class="btn btn-danger">Back</button>
-            </a>
         </form>
+          <a href="{% url 'homepage' %}">
+                <button class="btn btn-danger">Back</button>
+          </a>
       </div>
     </div>
 </div>
