--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -31,9 +31,6 @@
             </form>
 
           {% endif %}
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
 
           {% if request.user.is_superuser %}
               <li class="nav-item">
@@ -55,7 +52,6 @@
                   <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Mystery">Mystery</a></li>
                   <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Music">Music</a></li>
                   <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Action">Action</a></li>
-                  <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Sport">Sport</a></li>
                   <li><a class="dropdown-item" href="{% url 'find_movie' %}?genre=Sport">Sport</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'homepage' %}">Wszystkie</a></li>
@@ -107,10 +103,6 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
@@ -119,7 +111,7 @@
 
         <div class="container">
 
-        {% for movie, movie_rating in movies_zip %}
+        {% for movie, movie_rating, comment_count in movies_zip %}
 
                 <div class="card" style="width: 26rem; background-color: rgba(0, 0, 0, 0.1);" id="{{ movie }}">
                   <img src="http://127.0.0.1:8000/homepage/poster/{{ movie.poster }}" class="card-img-top" alt="{{ movie }}">
@@ -160,13 +152,16 @@
                               <button type="button" class="btn btn-outline-danger"><i class="fa-solid fa-thumbs-down"></i></button>
                           </div>
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
-                              <button type="button" class="btn btn-outline-primary">
-                                <i class="fa-regular fa-comments"></i>
-                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                        99+
-                                        <span class="visually-hidden">unread messages</span>
-                                    </span>
-                              </button>
+                                <a href=" {% url 'show_comments' movie.movie_id %}">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <i class="fa-regular fa-comments"></i>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                                {{ comment_count }}
+                                                <span class="visually-hidden">unread messages</span>
+                                            </span>
+                                    </button>
+                                </a>
+
                             </div>
                         </div>
                   </div>
